@@ -21,6 +21,7 @@ dpkg (1.19.0) UNRELEASED; urgency=medium
     - Mark ppc64 as having gcc builtin PIE in Dpkg::Vendor::Debian.
     - Make the Dpkg::Substvars warnings output deterministic.
       Thanks to Chris Lamb <lamby@debian.org>. Closes: #870221
+    - Remove unused POSIX module imports.
   * Documentation:
     - Document currently accepted syntax for changelogs in deb-changelog(5).
       Closes: #858579
